fixed z-index issue for the small screen index page

--- a/portfolio.css
+++ b/portfolio.css
@@ -7,21 +7,6 @@
   font-family: "Nunito Sans", sans-serif;
 }
 
-body:before {
-  content: "";
-  display: block;
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  /* z-index: -10; */
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  z-index: 2;
-}
 
 .projects {
   padding: 260px 30px 150px 30px;
@@ -36,7 +21,6 @@ div.iframe-container {
   display: flex;
   flex-direction: column;
   background-color: rgba(255, 255, 255, 0.493);
-  /* border: 2px solid rgba(0, 0, 0, 0.404); */
 }
 
 div.iframe-container {
