--- a/style.css
+++ b/style.css
@@ -6,6 +6,20 @@
   box-sizing: border-box;
   font-family: "Nunito Sans", sans-serif;
 }
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  z-index: 2;
+}
 
 header {
   position: absolute;
@@ -22,6 +36,11 @@ header {
   header {
     padding: 30px 40px 0px 40px;
   }
+}
+
+#navigation.active {
+  z-index: 3;
+  right: 0;
 }
 
 header #toggle {
@@ -111,6 +130,9 @@ header #toggle span:nth-child(3) {
 
 
 @media (max-width: 767px) {
+  body:before {
+    background: url(vermont-2.jpg) no-repeat center center;
+  }
   #navigation {
     right: -250px;
   }
